Fix gap between sections

--- a/src/styles.css
+++ b/src/styles.css
@@ -37,3 +37,8 @@ body {
   align-items: center;
   border: 1px solid black;
 }
+
+
+.section:first-child {
+  margin-top: 0;
+}
